# evolution-of-todo

./: .gitignore  CLAUDE.md  README.md  SUBMISSION.md  deploy-gke.sh  main.py  pyproject.toml
.github/workflows/: deploy.yml
.spec-kit/: config.yaml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/agent/: agent.py
backend/app/: auth.py  chatkit_server.py  chatkit_store.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: chat.py  tasks.py
backend/todo_mcp/: server.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/token/: route.ts
frontend/src/app/auth/signin/: page.tsx
frontend/src/app/auth/signup/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/components/: TaskCard.tsx  TaskForm.tsx  TaskList.tsx
frontend/src/hooks/: useTasks.ts
frontend/src/lib/: auth-client.ts  auth.ts
helm/: Chart.yaml  values.yaml
helm/templates/: backend-deployment.yaml  backend-service.yaml  frontend-deployment.yaml  frontend-service.yaml  secrets.yaml
phase1/: pyproject.toml
phase1/src/todo/: console.py  main.py  models.py  store.py
specs/: deployment.md  overview.md
specs/api/: rest-endpoints.md
specs/database/: schema.md
specs/features/: advanced.md  authentication.md  chatbot.md  task-crud.md
specs/ui/: pages.md
