[project]
name = "todo-backend"
version = "0.1.0"
description = "FastAPI backend for Todo app - Hackathon II"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlmodel>=0.0.24",
    "psycopg2-binary>=2.9.10",
    "python-jose[cryptography]>=3.3.0",
    "pydantic-settings>=2.7.0",
    "openai-agents>=0.0.7",
    "mcp[cli]>=1.3.0",
]
