[project]
name = "todo-phase1"
version = "0.1.0"
description = "Phase I — In-Memory Console Todo App"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
todo = "todo.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/todo"]
